add missing package

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@haxqer/ra-language-chinese": "^4.16.2",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@mui/utils": "^5.16.6",
     "@tanstack/react-query": "^5.56.2",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
