--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Synapse-Admin",
-  "name": "Synapse-Admin",
+  "short_name": "Synapse Admin",
+  "name": "Synapse Admin",
   "icons": [
     {
       "src": "favicon.ico",
