--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@mui/utils": "^5.16.14",
     "@tanstack/react-query": "^5.64.2",
     "history": "^5.3.0",
+    "jest-fixed-jsdom": "^0.0.9",
     "lodash": "^4.17.21",
     "papaparse": "^5.5.1",
     "ra-core": "^5.4.4",
