--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.4.2",
-    "react-test-renderer": "^18.3.1",
+    "react-test-renderer": "^19.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
@@ -63,12 +63,14 @@
     "ra-language-french": "^5.5.2",
     "ra-language-italian": "^3.13.1",
     "ra-language-russian": "^5.4.3",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-admin": "^5.5.2",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-is": "^18.3.1",
-    "ts-jest-mock-import-meta": "^1.2.1"
+    "react-is": "^19.0.0",
+    "ts-jest-mock-import-meta": "^1.2.1",
+    "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1"
   },
   "scripts": {
     "start": "vite serve",
