use github action commit hash

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -106,7 +106,7 @@ jobs:
         run: |
           mv dist synapse-admin
           tar chvzf synapse-admin.tar.gz synapse-admin
-      - uses: softprops/action-gh-release@v2
+      - uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631 # v2.2.2
         with:
           files: synapse-admin.tar.gz
           generate_release_notes: true
