--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "@emotion/styled": "^11.14.0",
     "@haleos/ra-language-german": "^1.0.0",
     "@haxqer/ra-language-chinese": "^4.16.2",
-    "@mui/icons-material": "^6.4.8",
-    "@mui/material": "^6.4.8",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@mui/utils": "^7.1.0",
     "@tanstack/react-query": "^5.77.1",
     "history": "^5.3.0",
@@ -67,9 +67,9 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-is": "^19.1.0",
-    "ts-jest-mock-import-meta": "^1.3.0",
     "react-router": "^7.6.0",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "ts-jest-mock-import-meta": "^1.3.0"
   },
   "scripts": {
     "start": "vite serve",
